clients/components/ThrowClient/ThrowClient.scss
@charset "utf-8";

@import "reset";


body {
  font-family: -apple-system, Times New Roman, Helvetica Neue, Arial, sans-serif;
  font-weight: 300;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  text-align: center;

  -webkit-user-select: none;
  user-select: none;
}
*, html {
  font-weight: 300;
}


.throw-client {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;

  .corner-dash {
    left: 2vw;
    h1 {
      position: absolute;
      top: 8vh;
    }
  }
  .widget-temp-score {
    top: 20vh;
    left: 52vw;
    width: 40vw;
    bottom: auto;

    &.score-container {
      left: 8vw;
    }
  }
  .widget-throws {
    bottom: 51vh;
    span {
      width: 30vw;
      font-size: 3vh;

      &.temp-score {
        display: none;
      }
    }
  }

  .controls {
    position: absolute;
    bottom: 1vh;
    left: 0;
    width: 100vw;
  }
}

